# cmm-compiler

./: CMakeLists.txt  input.cmm  lexer.cpp  main.cpp  parser.cpp  scope.cpp  semantic.cpp  symbol.cpp  token.cpp
doc/: cmm.inc
examples/: 01.cmm  02.cmm  03.cmm  04.cmm  05.cmm  06.cmm  07.cmm  09.cmm  10.cmm  11.cmm
include/: ast.h  exceptions.h  ir.h  lexer.h  parser.h  scope.h  semantic.h  simulator.h  symbol.h  token.h  utils.h
